src/app/Profile/profilepage/profilepage.component.css
.highlightimage{
    width: 88px;
    height: 88px;
    border-radius: 50%; 
    border: 1px solid grey;
    margin-top: 29px;
    cursor: pointer;
}

.mobilehighlightimage{width: 75px;
    height: 75px;
    border-radius: 50%;
    border: 1px solid grey;
    margin-top: 24px;
    cursor: pointer;
}

.highlightname{
    text-align: center;
    font-size: 14px;
    font-weight: 600;
    margin-top: 13px;
}
.editandview{
    margin-right: 16px;
    background-color: #e4e4e4;
    padding: 5px 11px;
    border-radius: 7px;
    cursor: pointer;
    font-weight: 600;
    font-size: 14px;
}
.editandviewmobile{
    margin-right: 22px;
    background-color: #e4e4e4;
    border-radius: 7px;
    cursor: pointer;
    font-weight: 600;
    font-size: 14px;
    padding: 5px 34px 
}
.follow{
    margin-right: 16px;
    background-color: rgb(0 149 246);
    padding: 6px 16px;
    border-radius: 7px;
    cursor: pointer;
    font-weight: 600;
    font-size: 14px;
    color: white;

}
.follow:hover{
    background-color:rgb(17, 100, 224) ;
}

    
.editandview:hover{
    background-color: rgb(186, 186, 186);
}

.settinglinks{
    text-align: center;
    padding: 13px;
    border-bottom: 1px solid rgb(218, 218, 218);
    cursor: pointer;
}
.settinglinks2{
    text-align: center;
    padding: 13px;
    border-bottom: 1px solid rgb(218, 218, 218);
    cursor: pointer;
}
.settinglinks1{
    padding: 14px;
    cursor: pointer;
}
.settinglinkslast1{
    padding: 14px;
    cursor: pointer;
    
}
.settinglinkslast1:hover{
    background-color: rgb(228, 228, 228);
    border-bottom-left-radius: 18px;
    border-bottom-right-radius: 18px;
}

.settinglinks:hover{
   background-color: rgb(228, 228, 228);
}
.settinglinks1:hover{
    background-color: rgb(236, 236, 236);
 }
.settinglinkslast{
    text-align: center;
    padding: 13px;
    cursor: pointer;
}
.settinglinkslast:hover{
  
   background-color: rgb(228, 228, 228);
}
.modal-body{
    padding: 0px !important;
}

.editimg{
    background-color: #e8e8e8;
    width: 64%;
    margin: 0 auto;
    margin-top: 45px;
    padding: 17px;
    border-radius: 17px;
}

.editimgmobile{
    background-color: #e8e8e8;
    width: 84%;
    margin: 0 auto;
    margin-top: 45px;
    padding: 17px;
    border-radius: 17px 
}


.websitebox{
    width: 68%;
    margin: 0 auto;
    padding: 17px;
    border-radius: 17px;
}
.websiteboxmobile{
    width: 94%;
    margin: 0 auto;
    padding: 17px;
    border-radius: 17px;
}
.profiletext{
    width: 64%;
    margin: 0 auto;
    margin-top: 52px;
    font-size: 20px;
    font-weight: bold;
}



    .profiletextmobile{
        width: 85%;
        margin: 0 auto;
        margin-top: 52px;
        font-size: 20px;
        font-weight: bold;
    }
.websitetext{
    width: 64%;
    margin: 0 auto;
    margin-top: 26px;
    font-size: 17px;
    font-weight: bold;
}
.websitetextmobile{
    width: 85%;
    margin: 0 auto;
    margin-top: 26px;
    font-size: 17px;
    font-weight: bold;
}
.websiteinput{
    background-color: #e8e8e8;
    width: 100%;
    border-radius: 11px;
    padding: 9px;
    border: 1px solid #c5c5c5;
}

.biotext{
    width: 64%;
    margin: 0 auto;
    margin-top: -10px;
    font-size: 17px;
    font-weight: bold;
}
.biotextmobile{
    width: 84%;
    margin: 0 auto;
    margin-top: -10px;
    font-size: 17px;
    font-weight: bold;
}
.bioinput{
    width: 100%;
    border-radius: 11px;
    padding: 9px;
    border: 1px solid #c5c5c5;
}
.bioinput:focus{
    outline-color: #c5c5c5;
}
.biobox{
    width: 68%;
    margin: 0 auto;
    padding: 17px;
    border-radius: 17px;
}
.bioboxmobile{
    width: 96%;
    margin: 0 auto;
    padding: 17px;
    border-radius: 17px;
}
.chooseimgbutton{
    background-color: #3d93ff;
    color: white;
    padding: 6px 14px;
    border-radius: 8px;
    margin-left: 235px;
    cursor: pointer;
}


.chooseimgbuttonmobile{
    background-color: #3d93ff;
    color: white;
    padding: 6px 14px;
    border-radius: 8px;
    margin-left: 53%;
    cursor: pointer;
    margin-top: 12px
}

.submiteditprofile{
    background-color: #3d93ff;
    color: white;
    padding: 12px 14px;
    border-radius: 8px;
    margin-left: 57%;
    cursor: pointer;
    margin-right: 164px;
    text-align: center;
}

.submiteditprofilemobile{
    background-color: #3d93ff;
    color: white;
    padding: 12px 14px;
    border-radius: 8px;
    margin-left: 23%;
    cursor: pointer;
    margin-right: 94px;
    text-align: center;
    margin-bottom: 79px 
}


.chooseimgbutton:hover{
    background-color:rgb(17, 100, 224) ;
}

.selectpost{
    font-weight: bolder;
   color: #ffffff;
   font-weight: bolder;
   background-color: dodgerblue;
   width: fit-content;
   padding: 5px 12px;
   margin: 0 auto;
   margin-top: 4%;
   border-radius: 8px;
}
.postimg{
    cursor: pointer;
    /* height: 102%; */
    height:298px;
    border-radius: 1px;
    box-shadow: 0px 0px 8px #939393;
    padding: 8px;
    transition: 1s;
}

.postimgmobile{
    cursor: pointer;
    /* height: 102%; */
    height:17vh;
    border-radius: 1px;
    box-shadow: 0px 0px 2px #919191;
    width: 123%;
}

.profilepicinpost{
    width: 102%;
    margin: 0 auto;
    padding: 17px;
    margin-left: -12px 
}
/* .postimg:hover{
   transform: scale(1.1);
} */
.mobileprofilepic{
    width: 85px;
    height: 85px;
    border-radius: 50%;
    margin-top: 63px;
    cursor: pointer;
    object-fit: contain;
    margin-left: 15px 
}
.mobileaccountname{
    margin-right: 16px;
    font-size: 19px;
    margin-top: 16px;
    margin-left: 13px;
    margin-bottom: -33px 
}

figure {
  display: grid;
  overflow: hidden;
  cursor: pointer;
  height: 100%;
}
figure > * {
  grid-area: 1/1;
  transition: .4s;
}
figure figcaption {
    display: grid;
    align-items: center;
    font-family: sans-serif;
    padding-left: 66px;
    font-size: 1.3rem;
    font-weight: bold;
    color: #fff;
    background: var(--c, #0009);
    clip-path: inset(0 var(--_i, 100%) 0 0);
    -webkit-mask: linear-gradient(#000 0 0), linear-gradient(#000 0 0);
    -webkit-mask-clip: text, padding-box;
    margin: -1px;
    /* --_i: 0%; */
}
figure:hover figcaption{
  --_i: 0%;
}
/* figure:hover img {
  transform: scale(1.2);
} */
@supports not (-webkit-mask-clip: text) {
  figure figcaption {
   -webkit-mask: none;
   color: #fff;
  }
}



.createnewpost{
    font-size: 17px;
     font-weight: 600;
     cursor: auto;
     border-bottom: 1px solid #c6c6c6;
     width: 100%;
     text-align: center;
     border-top-left-radius: 18px;
     border-top-right-radius: 18px;
     padding: 11px;
}


.captioninput{
    border: none;
}

.captioninput:focus{
    border: none;
    outline: none;
}
   
.share{
    border: none;
    background-color: white;
    color: #0297c8;
    font-weight: bold;
    float: right;
}
.menuiconpost{
    font-size: 24px;
    margin-right: 17px;
    cursor: pointer;
}
.likes{
    font-size: 24px;
    margin-right: 2px;
    cursor: pointer;
    margin-left: 10px;
}
.comment{
    font-size: 24px;
    margin-right: 2px;
    cursor: pointer;
    margin-left: 38px;
}

.commentinput{
    border: none;
    margin-top: 19px;
    margin-left: 13px
}

.commentinput:focus{
    outline: none;
}


.containerposts {
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    align-content: space-around;

    height: 93vmin;
    width: 93vmin;
    background: lightgrey;
}
.cell {
    height: 30vmin;
    width: 30vmin;
    background-color:#1E1E1E;
}

.parentdiv{
  display: flex;
}

.childdiv{
  flex: 1;
}

